backends/drm: use the correct format for CPU copy

BUG: 448376


(cherry picked from commit 0a3922e29dc937a0a14beed73266a4a9298a647a)